--- a/views/warden.ejs
+++ b/views/warden.ejs
@@ -3,9 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Warden Login</title>
+    <link rel="stylesheet" href="/stylesheets/Login.css" />
   </head>
   <body>
-    <h1>warden</h1>
+    <div class="container">
+      <h2>Warden Login</h2>
+      <form action="#" method="post" id="loginForm">
+        <input
+          type="text"
+          name="warden_name"
+          id="wardenName"
+          placeholder="Warden Name"
+          required
+        />
+        <input
+          type="text"
+          name="warden_id"
+          id="wardenId"
+          placeholder="Warden ID"
+          required
+        />
+        <input
+          type="text"
+          name="hostel_id"
+          id="hostelId"
+          placeholder="Hostel Name"
+          required
+        />
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+          required
+        />
+        <input type="submit" value="Login" />
+      </form>
+    </div>
+    <script src="/public/javascripts/studentLogin.js"></script>
   </body>
 </html>
